added escaping html feature

--- a/html.html
+++ b/html.html
@@ -3,4 +3,12 @@
         Day
         <input type="text" name="day">
     </label>
+    <label>
+        Month
+        <input type="text" name="month">
+    </label>
+    <label>
+        Year
+        <input type="text" name="year">
+    </label>
 </form>
